--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -12,3 +12,10 @@
     min-height: 90vh;
     overflow-x: hidden;
 }
+
+.paragraph {
+    text-align: center;
+    margin: 20px 40px;
+    padding: 10px 40px;
+    line-height: 40px;
+}
