feat: add advanced UI styling

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -8,7 +8,7 @@
     font-family: 'Roboto', sans-serif;
     color: white;
     font-size: calc(20px + (30 - 20) * ((100vw - 300px) / (1600 - 300)));
-    width: 100vw;
+    min-width: 95vw;
     min-height: 90vh;
     overflow-x: hidden;
 }
